--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,53 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap");
+
+body {
+  background-color: #f2f2f2;
+  font-family: "Noto Sans", "Noto Sans KR";
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.webAppWrapper {
+  width: 393px;
+  height: 852px;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+/* Home */
+.homeWrapper {
+  display: flex;
+  flex-direction: column;
+  background-color: #f4f6fa;
+  flex-grow: 1;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Start */
+.startWrapper {
+  display: flex;
+  flex-direction: column;
+  background-color: #ffffff;
+  flex-grow: 1;
+}
+
+/* Test */
+.testWrapper {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  background-color: #8cc8e0;
+  position: relative;
+  overflow: hidden;
+}
+
+/* recommendation */
+.scrollBtn {
+  width: 160px;
+  height: 22px;
+  margin-top: 25px;
+  border: none;
+  background-color: #8cc8e0;
+  color: #ffffff;
+  font-size: 11px;
+  border-radius: 10px;
+  margin-bottom: 70px;
 }
