--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap");
 
+html {
+  width: 1220px;
+}
+
 body {
   background-color: #f2f2f2;
   font-family: "Noto Sans", "Noto Sans KR";
