--- a/src/App.css
+++ b/src/App.css
@@ -55,3 +55,41 @@ body {
   position: relative;
   overflow: hidden;
 }
+
+/* Calendar */
+
+.react-calendar button {
+  border: none;
+  background-color: transparent;
+  font-family: "Noto Sans", "Noto Sans KR";
+  font-size: 20px;
+}
+
+.react-calendar__navigation {
+  margin-bottom: 15px;
+}
+
+.react-calendar__month-view__weekdays {
+  font-size: 17px;
+  margin-bottom: 15px;
+}
+
+.react-calendar__navigation__label__labelText {
+  font-size: 15px;
+}
+
+/* 요일 밑줄 제거 */
+.react-calendar__month-view__weekdays abbr {
+  text-decoration: none;
+  font-weight: bold;
+}
+
+/* 일 날짜 간격 */
+.react-calendar__tile {
+  padding: 5px 0px 18px;
+  position: relative;
+}
+
+.react-calendar__navigation__arrow {
+  cursor: pointer;
+}
