Feat: Ranking 페이지 구현 및 시연 대본에 맞게 수정

--- a/src/App.css
+++ b/src/App.css
@@ -85,11 +85,18 @@ body {
 }
 
 /* 일 날짜 간격 */
+
 .react-calendar__tile {
-  padding: 5px 0px 18px;
+  padding: 10px 0;
   position: relative;
 }
 
 .react-calendar__navigation__arrow {
   cursor: pointer;
+}
+
+.react-calendar__tile--now {
+  background: #485e92 !important;
+  border-radius: 50%;
+  color: #ffffff;
 }
